--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreezeShop</title>
     
-    <link rel="stylesheet" href="../my 1 progekt/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- <div class="block">
@@ -51,7 +51,7 @@
 
 
 
-
+<!-- 
     <div class="container">
         <div class="largeImg">
             <img id="current" src="img/1.jpg" alt="">
@@ -76,10 +76,72 @@
 
 
     </div>
+ -->
+
+<!-- <form action="" method="GET">
+    <label for="name">name</label>
+    <input type="text"> <br>
+    <label for="">Password</label>
+    <input type="password"> <br>
+    <input type="submit">
+
+    <input type="checkbox">
+</form>
+
+<p class="name"></p> -->
+<!-- 
+    <label for="">2 + 2 = ?</label>
+    <input type="checkbox"> <label for="">5</label>
+    <input type="checkbox"> <label for="">7</label>
+    <input type="checkbox"> <label for="">4</label>
+
+ -->
+
+<!-- <input type="color">
+ <div>
+    <p>Start</p>
+    <input type="buttom" value="click">
+    <p>end</p>
+
+ </div>
+-->
+
+
+
+
+<!-- <div>
+    <h2>Random number:</h2>
+    <h1></h1>
+    <input type="submit">
+</div>
+     -->
+
+
+<!-- <div style="background-color: antiquewhite;">
+    <button style="margin: 20px;">Hide / show text</button>
+    <p style="margin: 10px; display: block;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus aut repellat, debitis totam possimus nulla dicta, cum asperiores nemo vero inventore libero obcaecati sit! Nisi illum doloremque eius ducimus!</p>
+</div> -->
+
+
+<div>
+    <button>HTML</button>
+    <button>CSS</button>
+    <button>JS</button>
+    <p></p>
+
+
+
+    <P style="display: none;"> HTML Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
+    <P style="display: none;"> CSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
+    <P style="display: none;"> JS Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
+
+</div>
+    
+
 
 
 
 
     <script src="js/script.js"></script>
 </body>
-</html> 
+</html>
