--- a/index.html
+++ b/index.html
@@ -8,140 +8,82 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- <div class="block">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda velit doloribus alias, repellendus minima voluptatibus distinctio dolores omnis, ipsa ratione illo facere repellat voluptates dignissimos id culpa fuga earum laudantium?</p>
-        <p>Dolor repellat est saepe esse sed earum eveniet magnam minima. Ab iste aperiam quae. Ad cum voluptatibus quisquam earum ducimus consectetur delectus necessitatibus sed molestiae, corrupti, libero sapiente. Quo, consectetur.</p>
-        <p>Modi corrupti, saepe earum ipsum, consectetur asperiores quibusdam esse exercitationem ipsa deleniti ratione dicta ea voluptate mollitia impedit inventore ut incidunt itaque eum minima, labore perspiciatis libero unde accusamus? Tempore.</p>
-        <p>Modi magni unde saepe voluptatem veniam possimus necessitatibus asperiores? Deleniti, quas reprehenderit tenetur at repellendus et accusantium in sapiente officiis commodi, nisi eligendi eaque doloribus! Harum molestias exercitationem consequatur vitae.</p>
-        <p>Voluptate ipsa fugiat quam a quo, in harum aliquid modi? Iure eligendi ea esse maiores, atque obcaecati accusamus consequuntur animi tenetur corporis vitae? Et vitae labore nulla molestias rerum quos.</p>
-
-        <ul>
-            <li>Lorem, ipsum dolor.</li>
-            <li>Lorem, ipsum dolor.</li>
-            <li>Lorem, ipsum dolor.</li>
-        </ul>
-    </div> -->
+    <!-- task 3 -->
 
 
-
-
-
-
-
-    <!-- <div class="btn">
-        <button data-list="all">All</button>
-        <button data-list="active">Active</button>
-        <button data-list="done">Done</button>
-
-
-        <ul>
-            <li>Lorem, ipsum dolor.</li>
-            <li>Voluptate, ut eius.</li>
-            <li>Itaque, blanditiis labore.</li>
-            <li>Quasi, deserunt ipsa?</li>
-            <li>Inventore, iste beatae.</li>
-            <li>Nisi, obcaecati at.</li>
-            <li>Quos, suscipit at.</li>
-            <li>Distinctio, voluptates maxime!</li>
-        </ul>
-    
-    </div> -->
-
-
-
-
-
-<!-- 
-    <div class="container">
-        <div class="largeImg">
-            <img id="current" src="img/1.jpg" alt="">
-            <img id="left" src="img/left.png" alt="">
-            <img id="right" src="img/right.png" alt="">
-        </div>
-        <div class="smallImg">
-            <img src="img/1.jpg" alt="">
-            <img src="img/2.jpg" alt="">
-            <img src="img/3.jpg" alt="">
-            <img src="img/4.jpg" alt="">
-            <img src="img/5.jpg" alt="">
-            <img src="img/6.jpg" alt="">
-            <img src="img/7.jpg" alt="">
-            <img src="img/8.gif" alt="">
-            <img src="img/9.jpg" alt="">
-            <img src="img/10.jpg" alt="">
-            <img src="img/11.jpg" alt="">
-            <img src="img/12.jpg" alt="">
-        </div>
-
-
-
+    <div class="main">
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <img src="img/unnamed.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id explicabo at blanditiis atque nesciunt quidem tempore! Optio eius dolor aspernatur, iusto quasi, consectetur fugit unde veniam ad aperiam iure! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque omnis nobis a eveniet odit blanditiis quis voluptatum minus explicabo iste! Quis ducimus quia unde saepe neque, vero quidem minus porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id explicabo at blanditiis atque nesciunt quidem tempore! Optio eius dolor aspernatur, iusto quasi, consectetur fugit unde veniam ad aperiam iure! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque omnis nobis a eveniet odit blanditiis quis voluptatum minus explicabo iste! Quis ducimus quia unde saepe neque, vero quidem minus porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id explicabo at blanditiis atque nesciunt quidem tempore! Optio eius dolor aspernatur, iusto quasi, consectetur fugit unde veniam ad aperiam iure! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque omnis nobis a eveniet odit blanditiis quis voluptatum minus explicabo iste! Quis ducimus quia unde saepe neque, vero quidem minus porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id explicabo at blanditiis atque nesciunt quidem tempore! Optio eius dolor aspernatur, iusto quasi, consectetur fugit unde veniam ad aperiam iure! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque omnis nobis a eveniet odit blanditiis quis voluptatum minus explicabo iste! Quis ducimus quia unde saepe neque, vero quidem minus porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id explicabo at blanditiis atque nesciunt quidem tempore! Optio eius dolor aspernatur, iusto quasi, consectetur fugit unde veniam ad aperiam iure! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque omnis nobis a eveniet odit blanditiis quis voluptatum minus explicabo iste! Quis ducimus quia unde saepe neque, vero quidem minus porro.</p>
     </div>
- -->
 
-<!-- <form action="" method="GET">
-    <label for="name">name</label>
-    <input type="text"> <br>
-    <label for="">Password</label>
-    <input type="password"> <br>
-    <input type="submit">
-
-    <input type="checkbox">
-</form>
-
-<p class="name"></p> -->
-<!-- 
-    <label for="">2 + 2 = ?</label>
-    <input type="checkbox"> <label for="">5</label>
-    <input type="checkbox"> <label for="">7</label>
-    <input type="checkbox"> <label for="">4</label>
-
- -->
-
-<!-- <input type="color">
- <div>
-    <p>Start</p>
-    <input type="buttom" value="click">
-    <p>end</p>
-
- </div>
--->
+    <div class="color">
+        <button>Чорний</button>
+        <button>Синій</button>
+        <button>Красний</button>
+        <button>Жовтий</button>
+        <button>Зелений</button>
+        <button>Оранжевий</button>
+    </div>
+    <div class="bord">
+        <button>Сплошна</button>
+        <button>Пунктирна</button>
+        <button>Точки</button>
+        <button>Двойна</button>
+        <button>Вігнута</button>
+        <button>Випухла</button>
+    </div>
+    <div class="font">
+        <button>C зачосками</button>
+        <button>Без зачосок</button>
+        <button>Моношіринний</button>
+        <button>Курсив</button>
+        <button>Фантазийний</button>
+        <button>impact</button>
+    </div>
+ 
 
 
 
 
-<!-- <div>
-    <h2>Random number:</h2>
-    <h1></h1>
-    <input type="submit">
-</div>
+
+
+
+
+<!-- task 2222 -->
+
+    <!-- <div class="main">
+        <div>
+            <img src="img/city.jpg" alt="">
+            <button>Ваше описания рисунка</button>
+        </div>
+        <div>
+            <img src="img/food.jpg" alt="">
+            <button>Ваше описания рисунка</button>
+        </div>
+        <div>
+            <img src="img/holiday.jpg" alt="">
+            <button>Ваше описания рисунка</button>
+        </div>
+        <div>
+            <img src="img/lebed.jpg" alt="">
+            <button>Ваше описания рисунка</button>
+        </div>
+    </div> 
+
+
      -->
+<!-- task 11111 -->
 
+<!-- 
+<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, asperiores? Laboriosam in delectus, ut eveniet incidunt ab expedita, aliquid placeat, dolores sit asperiores ea molestias consequatur velit sapiente? Aperiam, quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nam, eveniet at enim minus, distinctio commodi, velit odit sunt eligendi voluptas deserunt amet totam est ducimus sed voluptatum sit mollitia.</P>
+<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, asperiores? Laboriosam in delectus, ut eveniet incidunt ab expedita, aliquid placeat, dolores sit asperiores ea molestias consequatur velit sapiente? Aperiam, quis. Molestiae consequuntur quo a nulla possimus, aperiam ex ullam praesentium unde? Suscipit, nobis vero sit blanditiis tenetur cum voluptates eveniet ipsa odit, magni deserunt. Illum eius error minus mollitia. Doloremque.</P>
+<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, asperiores? Laboriosam in delectus, ut eveniet incidunt ab expedita, aliquid placeat, dolores sit asperiores ea molestias consequatur velit sapiente? Aperiam, quis. Expedita inventore at nesciunt, quos aliquid assumenda, optio rem illum voluptas, sint sequi necessitatibus doloremque similique quia excepturi cum odit nam ipsa minima! Repudiandae sunt distinctio cum consequatur architecto repellat.</P> -->
 
-<!-- <div style="background-color: antiquewhite;">
-    <button style="margin: 20px;">Hide / show text</button>
-    <p style="margin: 10px; display: block;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus aut repellat, debitis totam possimus nulla dicta, cum asperiores nemo vero inventore libero obcaecati sit! Nisi illum doloremque eius ducimus!</p>
-</div> -->
-
-
-<div>
-    <button>HTML</button>
-    <button>CSS</button>
-    <button>JS</button>
-    <p></p>
-
-
-
-    <P style="display: none;"> HTML Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
-    <P style="display: none;"> CSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
-    <P style="display: none;"> JS Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita voluptatem magnam, vel ex voluptas nihil voluptatum odio illum excepturi quisquam mollitia. Sunt nostrum illum ipsam laborum doloribus iste numquam.</P>
-
-</div>
-    
-
-
-
-
-
-    <script src="js/script.js"></script>
 </body>
+<script src="js/script.js"></script>
 </html>
